# coil

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
adaptive_teaming/envs/: __init__.py  gridworld.py  gridworld_interaction_env.py  interaction_env.py  med_gridworld.py  objects.py  pick_place.py  pick_place_interaction_env.py  real_conveyor.py  real_conveyor_interaction_env.py
adaptive_teaming/planner/: __init__.py  base_planner.py  confidence_based_planner.py  facility_location_planner.py  info_gain_planner.py  naive_greedy_planner.py  pref_belief_estimator.py
adaptive_teaming/skills/: gridworld_skills.py  pick_place_skills.py  real_conveyor_skills.py
adaptive_teaming/utils/: collect_demos.py  object.py  utils.py
cfg/: run_interaction_planner.yaml  run_interaction_planner_med.yaml
cfg/cost_cfg/: high_cost_human.yaml  low_cost_human.yaml  medium_cost_human.yaml  real_conveyor_human.yaml
data/gridworld/: gridworld_demo_0.pkl  gridworld_demos.pkl
data/pick_place/demos/: pick_place_bread.hdf5
data/pick_place/demos/1736478590_943425/ep_1736478591_2981272/: model.xml  state_1736478592_362192.npz  state_1736478593_4739661.npz  state_1736478594_5711234.npz  state_1736478595_7087557.npz  state_1736478596_9731238.npz  state_1736478598_2233043.npz  state_1736478599_4111068.npz  state_1736478600_5990565.npz  state_1736478601_9029615.npz  state_1736478603_2826602.npz  state_1736478604_5909197.npz  state_1736478605_9161446.npz  state_1736478607_203824.npz  state_1736478608_5263867.npz  (+3 more)
scripts/: run_interaction_planner.py
(+82 files in other folders)
